# law

assignment-1/: Cargo.toml
assignment-1/src/: main.rs
assignment-1/static/: index.html
assignment-2/: get_access_token.py  repository.py  storage.py
assignment-3/server-1/: Cargo.toml
assignment-3/server-1/src/: main.rs
assignment-3/server-1/templates/: base.html  index.html  upload-error.html  upload-progress.html
assignment-3/server-2/: .gitignore  Cargo.toml
assignment-3/server-2/src/: main.rs
final-assignment/: .gitignore  docker-compose.yml
final-assignment/server-1/: Cargo.toml  Dockerfile
final-assignment/server-1/src/: main.rs
final-assignment/server-1/templates/: base.html  form.html  progress.html
final-assignment/server-2/: .dockerignore  Cargo.toml  Dockerfile
final-assignment/server-2/src/: main.rs
final-assignment/server-3/: .dockerignore  Cargo.toml  Dockerfile
final-assignment/server-3/src/: amqp.rs  main.rs
final-assignment/server-4/: Dockerfile  nginx.conf  run.sh
final-assignment/server-5/: Cargo.toml  Dockerfile
final-assignment/server-5/src/: main.rs
lab1/: Cargo.toml  Dockerfile  Rocket.toml
lab1/static/: index.html
tugas-2/: .gitignore  Makefile  crud.py  database.py  gzip.py  schema.sql  storage.py  utils.py
