[package]
name = "server-2"
version = "0.1.0"
authors = ["Fata Nugraha <fatanugraha@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
actix-multipart = "0.2.0"
flate2 = "1.0.14"
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
queryst = "1"
threadpool = "1.7.1"
lazy_static = "1.4.0"
lapin = "0.33.1"
async-trait = "0.1.27"
uuid = { version = "0.4", features = ["v4"] }
log = "0.4.8"
env_logger = "0.7.1"
futures-executor = "^0.3"
futures-util = "^0.3"
