[package]
name = "server-2"
version = "0.1.0"
authors = ["Fata Nugraha <fatanugraha@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envconfig = "0.8.0"
envconfig_derive = "0.8.0"
lapin = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-amqp = "0.1.0"
futures-util = "0.3"
futures = "0.3"
reqwest = { version = "0.10", features = ["gzip", "stream"] }
regex = "1"
