[package]
name = "server-3"
version = "0.1.0"
authors = ["Fata Nugraha <fatanugraha@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envconfig = "0.8.0"
envconfig_derive = "0.8.0"
lapin = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-amqp = "0.1.0"
warp = "0.2"
zip = { "version" = "0.5", features = ["deflate"]}
md5 = "0.7"
base64 = "0.12"
